network: Fix the network panel being kept alive

NetObjects and CcNetworkPanel aren't widgets, and hold references to
each other. Simplify things by having NetObject hold a pointer to
CcNetworkPanel (and the singletons NMRemoteSettings and NMClient)
instead, and clear their pointers when the original object is unref'ed.

https://bugzilla.gnome.org/show_bug.cgi?id=746411